correct spacing between posts

--- a/css/he-said-she-said.css
+++ b/css/he-said-she-said.css
@@ -68,6 +68,7 @@ nav{
 	position: relative;
 	background-color: rgba(0,0,0,0);
 	width: 100%;
+	margin-top: 10%;
 }
 
 .date{
